Fix for too much whitespace (especially when using highlight.js)

--- a/static/css/olive.css
+++ b/static/css/olive.css
@@ -123,6 +123,7 @@ pre
 {
 /*    border-left: 5px solid #838F67;*/
     border-left: none;
+    padding: 0;
 }
 
 #content .label
